src/main/kustomize/overlays/stage/configure-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skaffold-demo
spec:
  template:
    spec:
      containers:
        - name: skaffold-demo
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.1"
