src/main/kustomize/overlays/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skaffold-demo
spec:
  ingressClassName: nginx
  rules:
    - host: "localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/hello"
            backend:
              service:
                name: skaffold-demo
                port:
                  number: 8080
